# test_assignment

call_center/: CMakeLists.txt  config.json
call_center/include/: call_center.hpp  config.hpp  listener.hpp  operator.hpp  queue_request.hpp  request.hpp  session.hpp
call_center/src/: call_center.cpp  config.cpp  listener.cpp  main.cpp  operator.cpp  queue_request.cpp  request.cpp  session.cpp
info-tecs-test/: Razrabotchik-Linux-SPb.docx  Razrabotchik-S_-SPb.docx
info-tecs-test/infotecs_Malyshev_Yan/first_program/: CMakeLists.txt
info-tecs-test/infotecs_Malyshev_Yan/first_program/include/: buffer.hpp
info-tecs-test/infotecs_Malyshev_Yan/first_program/src/: buffer.cpp  main.cpp
info-tecs-test/infotecs_Malyshev_Yan/second_program/: CMakeLists.txt  main.cpp
